# finance-advisor

./: .cache.sqlite  .python-version  README.md  Untitled.ipynb  budget.py  main.py  portfolio.py  portfolio_tracker.py  position.py  pyproject.toml  transaction.py  yfinance-type-exploration.ipynb
.ipynb_checkpoints/: yfinance-type-exploration-checkpoint.ipynb
DataSources/: yahoo.py
PortfolioSources/: IPortfolioSource.py  csv.py
